RESOLVED FIXED 31437
[Android] The Android specific files in page/Android are out of date.
https://bugs.webkit.org/show_bug.cgi?id=31437
Summary [Android] The Android specific files in page/Android are out of date.
Ben Murdoch
Reported 2009-11-12 14:11:34 PST
The files in WebCore/page/android are out of date wrt Android 2.0. Patch to update them following shortly.
Attachments
Patch (7.79 KB, patch)
2009-11-12 14:31 PST, Ben Murdoch
dglazkov: review+
commit-queue: commit-queue-
Ben Murdoch
Comment 1 2009-11-12 14:31:32 PST
Created attachment 43099 [details] Patch Due to the recent ENABLE(INSPECTOR) guard addition, we no longer need the InspectorControllerAndroid.cpp stub file hence this patch removes it.
Dimitri Glazkov (Google)
Comment 2 2009-11-12 14:40:08 PST
Comment on attachment 43099 [details] Patch r=me.
WebKit Commit Bot
Comment 3 2009-11-12 17:43:20 PST
Comment on attachment 43099 [details] Patch Rejecting patch 43099 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11616 test cases. fast/workers/shared-worker-frame-lifecycle.html -> crashed Exiting early after 1 failures. 8372 tests run. 326.03s total testing time 8371 test cases (99%) succeeded 1 test case (<1%) crashed 3 test cases (<1%) had stderr output
Ben Murdoch
Comment 4 2009-11-12 18:15:39 PST
Will land manually.
Ben Murdoch
Comment 5 2009-11-12 23:14:52 PST
Landed as r50922, closing bug.
Eric Seidel (no email)
Comment 6 2009-11-13 11:45:14 PST
Filed bug 31481 about the crash.
Note You need to log in before you can comment on or make changes to this bug.