[Android] The Android specific files in page/Android are out of date. https://bugs.webkit.org/show_bug.cgi?id=31437

Reviewed by Dimitri Glazkov.

No tests required.

* page/android/DragControllerAndroid.cpp:
(WebCore::DragController::dragOperation): Added.
(WebCore::DragController::cleanupAfterSystemDrag):
* page/android/EventHandlerAndroid.cpp:
(WebCore::EventHandler::accessKeyModifiers): Added.
* page/android/InspectorControllerAndroid.cpp: Removed.



Canonical link: https://commits.webkit.org/42351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50922 268f45cc-cd09-0410-ab3c-d52691b4dbfc